# beaverbot

./: .gitignore  .gitmodules  LICENSE  MEMO.md  README.md  bag_to_csv.py
beaverbot_control/: CMakeLists.txt  package.xml  setup.py
beaverbot_control/beaverbot_control/: adaptive_pure_pursuit.py  beaverbot_control.py  feedforward.py  pure_pursuit.py  rls_compensator.py  rls_online.py
beaverbot_control/launch/: beaverbot_control.launch
beaverbot_control/scripts/: beaverbot_control_node
beaverbot_control/tests/: test_demo_1.py  test_demo_2.py  test_demo_3.py
beaverbot_control/trajectories/: demo2.csv  demo3.csv  eight_curve.csv  excited_0.2.csv  excited_latest.csv  excited_less.csv  exicted.csv  experiment_dubins_trajectory.csv  global_trajectory.csv  l_shape_0.1.csv  l_shape_0.2.csv  l_shape_0.3.csv  lemniscate_trajectory.csv  loop_l_shape.csv  loop_l_shape_0.3.csv  robot_velocity_data.csv  slip-0.0.csv  slip-0.05.csv  slip-0.06.csv  slip-0.07.csv  slip-0.08.csv  slip-0.09.csv  slip-0.1.csv  slip-0.11.csv  slip-0.12.csv  slip-0.13.csv  slip-0.14.csv  slip-0.15.csv  slip-0.16.csv  slip-0.17.csv  slip-0.18.csv  slip-0.19.csv  slip-0.2.csv  slip-0.3.csv  slip-0.4.csv
beaverbot_description/: CMakeLists.txt  package.xml
beaverbot_description/config/: control.yaml
beaverbot_description/launch/: gazebo.launch  nitrabot_description.launch
beaverbot_description/meshes/: cleaner.stl
beaverbot_description/rviz/: urdf.rviz  urdf.vcg
beaverbot_description/urdf/: beaverbot.urdf.xacro  beaverbot.xacro  colors.xacro  properties.xacro  sensors_and_actuators.xacro
beaverbot_dockerfiles/: Dockerfile  Dockerfile.cartographer  Dockerfile.melodic  Dockerfile.windows  docker-compose.windows.yml  docker-compose.yaml
beaverbot_dockerfiles/install/: i_dep.sh  xauth.sh
beaverbot_dockerfiles/rules/: 99-usb-driver.rules  99-usb-gps.rules  99-usb-imu.rules  99-usb-lidar.rules  README.md  register.sh
beaverbot_launch/: CMakeLists.txt  package.xml
beaverbot_launch/config/: hwt905.yaml  laser_filter.yaml
beaverbot_launch/launch/: beaverbot_gazebo.launch  bringup.launch  navigation.launch  sensors.launch
beaverbot_launch/maps/: dummy_map.yml
beaverbot_localization/: CMakeLists.txt  setup.py
beaverbot_localization/beaverbot_cartographer/: CMakeLists.txt  package.xml
beaverbot_localization/beaverbot_cartographer/configuration_files/: pure_localization.lua  slam.lua
beaverbot_localization/beaverbot_cartographer/launch/: pure_localization.launch  slam.launch
beaverbot_localization/beaverbot_cartographer/scripts/: create_map.sh
beaverbot_localization/beaverbot_localization/: calibrate.py  package.xml  setup.py
beaverbot_localization/beaverbot_localization/beaverbot_localization/: calibrate.py
beaverbot_localization/beaverbot_localization/config/: ekf_global_params.yaml  ekf_local_params.yaml  navsat_transform_params.yaml  tf_view.rviz
beaverbot_localization/beaverbot_localization/scripts/: calibrate
beaverbot_localization/beaverbot_pose/: CMakeLists.txt  README.md  package.xml  setup.py
beaverbot_localization/beaverbot_pose/beaverbot_pose/: beaverbot_pose_node.py
beaverbot_localization/beaverbot_pose/launch/: hakuroukun_pose.launch
beaverbot_localization/beaverbot_pose/scripts/: beaverbot_pose_node
beaverbot_localization/config/: ekf_global_params.yaml  ekf_local_params.yaml  navsat_transform_params.yaml  tf_view.rviz
beaverbot_localization/launch/: ekf_localization.launch
beaverbot_navigation/euler_generator/: CMakeLists.txt  package.xml
beaverbot_navigation/euler_generator/include/euler_generator/: a_star.h
beaverbot_navigation/euler_generator/src/: a_star.cpp
beaverbot_navigation/sdv_msgs/: CMakeLists.txt  package.xml
beaverbot_navigation/sdv_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
beaverbot_navigation/sdv_msgs/srv/: TrajectoryFlags.srv
beaverbot_navigation/trajectory_generation/: CMakeLists.txt  README.md  package.xml
beaverbot_navigation/trajectory_generation/include/trajectory_generation/: a_star.h  coverage_planner.h  global_trajectory.h  utilities.h
beaverbot_navigation/trajectory_generation/src/: a_star.cpp  a_star_node.cpp  coverage_planner.cpp  generate_trajectory.cpp  global_trajectory.cpp  utilities.cpp
beaverbot_online/: CMakeLists.txt  package.xml
beaverbot_online/scripts/: rls_node.py  rls_online.py  subscribing_to_imu_cmd.py  trajectory_no_slip.csv  trajectory_plotting_comparison.py  trajectory_recorder.py  trajectory_with_slip.csv
beaverbot_perception/laserscan2costmap/: CMakeLists.txt  package.xml
beaverbot_perception/laserscan2costmap/launch/: laserscan2costmap.launch
beaverbot_perception/laserscan2costmap/src/: laserscan2costmap.cpp
beaverbot_perception/obstacle_detection/: CMakeLists.txt  package.xml  setup.py
beaverbot_perception/obstacle_detection/obstacle_detection/: obstacle_detection_node.py
beaverbot_perception/obstacle_detection/scripts/: obstacle_detection_node
beaverbot_sensors/beaverbot_driver/: CMakeLists.txt  package.xml
beaverbot_sensors/beaverbot_driver/include/beaverbot_driver/: robot_data.h
beaverbot_sensors/beaverbot_driver/launch/: beaverbot_driver.launch
beaverbot_sensors/beaverbot_driver/msg/: EncoderWheelVel.msg  RobotWheelVel.msg
beaverbot_sensors/beaverbot_driver/src/beaverbot_driver/: command_to_odom.cpp  encoder_to_odom.cpp  robot_communication.cpp  robot_data.cpp
beaverbot_sensors/tsnd5_driver/: CMakeLists.txt  package.xml  setup.py
beaverbot_sensors/tsnd5_driver/launch/: tsnd5_driver.launch
beaverbot_sensors/tsnd5_driver/scripts/: tsnd5_driver_node
beaverbot_sensors/tsnd5_driver/tsnd5_driver/: common_utils.py  thread_utils.py  tsnd5_driver.py  tsnd5_driver_node.py
