<?xml version="1.0"?>
<package format="2">
  <name>beaverbot_description</name>
  <version>0.1.0</version>
  <description>The beaverbot_description package</description>

  <maintainer email="syseng402linux@todo.todo">syseng402linux</maintainer>

  <license>Apache 2.0</license>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp rospy controller_manager joint_state_controller robot_state_publisher rviz std_msgs genmsg urdf xacro tf serial</build_depend>
  
  <build_export_depend>roscpp rospy controller_manager joint_state_controller robot_state_publisher rviz std_msgs genmsg urdf xacro tf serial</build_export_depend>
  
  <exec_depend>roscpp rospy controller_manager joint_state_controller robot_state_publisher rviz std_msgs genmsg urdf xacro tf serial</exec_depend>

  <export>

  </export>
</package>
