<?xml version="1.0"?>
<package format="2">
  <name>beaverbot_cartographer</name>
  <version>0.0.0</version>
  <description>The beaverbot_cartographer package</description>
  <maintainer email="syseng402@todo.todo">syseng402</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>