<?xml version="1.0.0"?>
<package format="2">
  <name>obstacle_detection</name>
  <version>1.0.0</version>
  <description>The obstacle_detection package</description>
  <maintainer email="dinh.ngoc.duc.mo@tut.ac.jp">Dinh Ngoc Duc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
