<?xml version="1.0"?>
<package format="2">
    <name>tsnd5_driver</name>
    <version>1.0.0</version>
    <description>Package for the TSND151 sensor driver</description>
    <maintainer email="tran.thanh@hachi-x.com">Tran Thanh</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>

    <exec_depend>rospy</exec_depend>

    <export>
        <build_type>catkin</build_type>
    </export>
</package>